--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,17 +1,17 @@
-<div class="container">
+<div class="container ">
   <h1>Welcome to Trailing</h1>
 
   <form action='/trails' method='post'>
     <label for='city'>City</label>
-    <input type='text' name='city' id='city'><br>
+    <input class='field' type='text' name='city' id='city'><br>
     <label for='state'>State</label>
-    <input type='text' name='state' id='state'><br>
+    <input class='field' type='text' name='state' id='state'><br>
     <label for='activity'>Activity</label>
-    <input type='text' name='activity' value='hiking' id='activity'><br>
+    <input class='field' type='text' name='activity' value='hiking' id='activity'><br>
     <label for='range'>Range</label>
-    <input type='text' name='range' id='range'>
-    <label for='range'>(in miles)</label><br><br>
-    <input type='submit' value='Find My Solitude' id='btn-submit'>
+    <input class='field' type='text' name='range' id='range'>
+    <label for='range' id='miles'>(in miles)</label><br><br>
+    <input type='submit' value='Connect me with nature' id='btn-submit'>
   </form>
 
 </div>
